fix: 1. styling navbar mobile, 2. entrance and exit animation on navbar mobile, 3. navbar was not collapsed when entering a new route after clicking on a navbar link

--- a/focufy-frontend/src/app/components/navbar/navbar.component.scss
+++ b/focufy-frontend/src/app/components/navbar/navbar.component.scss
@@ -25,7 +25,7 @@ a {
     #navbarNav {
         position: fixed;
         right: 0px;
-        top: 43px;
+        top: 56px;
     }
 
     #navbarNav ul {
@@ -37,10 +37,43 @@ a {
         padding-top: 10px;
         background: rgba(255, 255, 255, 1);
         padding-right: 10px;
+        box-shadow: 0px 0px 6px rgba(0,0,0,0.5);
     }
 
     #navbarNav li {
         margin-bottom: 6px;
+    }
+
+    #navbarNav .collapsing {
+        transform: translate(0px, 0px) !important;
+        position: fixed;
+        height: 0;
+        overflow: hidden;
+        -webkit-transition-property: height, visibility;
+        transition-property: height, visibility;
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        -webkit-transition-timing-function: ease;
+        transition-timing-function: ease;
+        box-shadow: 0px 0px 6px rgba(0,0,0,0.5);
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+      }
+
+    #navbarNav, #navbarNav.navbar-collapse.collapse {
+        transform: translate(150px, 0px);
+        transition: transform .3s;
+    }
+
+    #navbarNav, #navbarNav.navbar-collapse.collapsing {
+        transform: translate(80px, 0px);
+        transition: 0s;
+        display: block;
+    }
+
+    #navbarNav.navbar-collapse.collapse.show {
+        transform: translate(0, 0);
+        transition: 0.3s;
     }
 
     .navbar .navbar-toggler,
